# COSMO

./: .gitignore  CONTRIBUTING.md  README.md  cosmo_required_fixes.patch  environment.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
Nytt20251216/OL2OP/: convert_openlabel_to_omega.py
Nytt20251216/Try 2/: convert_openlabel_to_omega.py
docs/: README.md
docs/developer_guide/: georef-pipeline.md  tests.md
docs/getting-started/: quickstart.md
docs/how-to/: calibration.md  troubleshooting.md
docs/images/: cosmo_logo_with_text.drawio
docs/reference/: inputs-opendrive.md  inputs-openlabel.md  osi-mcap.md  outputs-omega-prime.md
docs/user_guide/: cli.md  workflow.md
src/cosmo/: gui_legacy.py  trajectory_explorer.py
src/cosmo/app/: calibrate_app.py  convert_app.py
src/cosmo/calibration/: compute.py
src/cosmo/cli/: __init__.py  calibrate.py  convert.py  correct.py  gui.py  main.py
src/cosmo/converters/: ontology_mapper.py  openlabel_to_omega.py
src/cosmo/corrections/: __init__.py  drone_camera.py  oblique.py
src/cosmo/gui/: __init__.py  image_viewer.py  main_window.py  marker_converter.py  pixel_pairs_editor.py  plotting.py  workers.py
src/cosmo/schemas/: savant_ontology_1.2.0.ttl
tests/: __init__.py  cli_helpers.py  conftest.py  mcap_helpers.py  test_calibrate_cli_validation.py  test_calibration_compute_whitebox.py  test_cli_contracts_not_smoke.py  test_cli_smoke_calibrate.py  test_cli_smoke_convert.py  test_console_scripts_smoke.py  test_convert_alignment_flags.py  test_convert_app_e2e_not_smoke.py  test_convert_cli_validation.py  test_convert_no_scripts_fallback.py  test_convert_outputs.py  test_core_calibrate_whitebox.py  test_core_convert_whitebox.py  test_integration_mcap_convert_app.py  test_integration_mcap_converter.py  test_integration_mcap_gt_count.py  test_integration_mcap_topics.py  test_main_dispatch.py  test_openlabel_to_omega_whitebox.py
tools/: xodr_viewer.py
