[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cosmo"
version = "0.1.0"
description = "COSMO conversion tools (OpenLABEL -> OSI/MCAP + Omega-Prime CSV) with GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "pillow", "matplotlib"]


[project.optional-dependencies]
gui = ["PyQt5>=5.15"]
mcap = ["betterosi"]
plot = ["omega-prime", "altair"]
dev = ["pytest", "ruff", "pre-commit"]
docs = ["mkdocs-material", "mkdocstrings[python]"]
gui-fallback = ["PySide6", "PyQt6"]

[project.scripts]
cosmo = "cosmo.cli.main:main"
cosmo-gui = "cosmo.cli.gui:main"
cosmo-convert = "cosmo.cli.convert:main"
cosmo-calibrate = "cosmo.cli.calibrate:main"

# Keep if you want (optional)						 
[tool.hatch.build]
include = [
  "src/cosmo/**/*.py",
  "src/cosmo/schemas/**/*",
  "src/cosmo/assets/**/*",
]

# ✅ Required for src-layout
[tool.hatch.build.targets.wheel]
packages = ["src/cosmo"]

# ✅ Strongly recommended for non-python files
[tool.hatch.build.targets.wheel.force-include]
"src/cosmo/schemas" = "cosmo/schemas"
 "src/cosmo/assets"  = "cosmo/assets"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "F", "E", "W"]

ignore = [
  "E501",  # line too long
  "E701",  # multiple statements on one line (colon)
  "E702",  # multiple statements on one line (semicolon)
]

exclude = [
  "scripts/",
  "src/cosmo/gui_old.py",
  "src/cosmo/gui_old/",
]