[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cosmo"
version = "0.1.0"
description = "COSMO conversion tools (OpenLABEL -> OSI/MCAP + Omega-Prime CSV) with GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "pillow", "matplotlib"]


[project.optional-dependencies]
gui = ["PyQt5>=5.15"]
mcap = ["betterosi>=0.8.1,<0.9", "betterproto2>=0.8,<0.9"]
plot = ["omega-prime", "altair"]
docs = ["mkdocs-material", "mkdocstrings[python]"]
gui-fallback = ["PySide6", "PyQt6"]
full = ["cosmo[gui,mcap,plot]"]

[dependency-groups]
dev = ["pytest", "ruff", "pre-commit"]

[project.scripts]
cosmo = "cosmo.cli.main:main"
cosmo-gui = "cosmo.cli.gui:main"
cosmo-convert = "cosmo.cli.convert:main"
cosmo-calibrate = "cosmo.cli.calibrate:main"

# Keep if you want (optional)						 
[tool.hatch.build]
include = [
  "src/cosmo/**/*.py",
  "src/cosmo/schemas/**/*",
]

# ✅ Required for src-layout
[tool.hatch.build.targets.wheel]
packages = ["src/cosmo"]

# ✅ Strongly recommended for non-python files
[tool.hatch.build.targets.wheel.force-include]
"src/cosmo/schemas" = "cosmo/schemas"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "F", "E", "W"]

ignore = [
  "E501",  # line too long
  "E701",  # multiple statements on one line (colon)
  "E702",  # multiple statements on one line (semicolon)
]

exclude = [
  "scripts/",
  "src/cosmo/gui_old.py",
  "src/cosmo/gui_old/",
]
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

# Register markers to avoid warnings and keep CI strict/clean

markers = [
  "smoke: fast CLI smoke tests (calibrate/convert/entrypoints) that can be filtered",
  "integration: end-to-end tests requiring optional deps (e.g. betterosi/MCAP) or heavier assets",
]

# Optional quality-of-life defaults:
# -ra: show extra test summary info for skipped/xfailed, etc.
# --strict-markers: fail if an unknown marker is used (prevents typos)
# -q can stay in CI; locally you might prefer less quiet output
addopts = "-ra --strict-markers"
