[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cosmo"
version = "0.4.1"
description = "COSMO conversion tools (OpenLABEL -> OSI/MCAP + Omega-Prime CSV) with GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "pillow", "matplotlib", "dataprov", "reverse_geocoder", "pycountry", "orbit-georef"]


[dependency-groups]
# Leaf groups — shared building blocks
dev        = ["pytest", "ruff", "pre-commit"]
correction = ["scipy>=1.10"]
gui        = ["PyQt5>=5.15"]
mcap       = ["betterosi>=0.8.1,<0.9", "betterproto2>=0.9,<0.10"]
plot       = ["omega-prime>=0.3.0", "altair"]
ontology   = ["rdflib>=6.0"]
docs       = ["mkdocs-material", "mkdocstrings[python]"]

# Tool groups — uv sync --group <name>  (or --all-groups for everything)
cosmo-cli            = [{include-group = "mcap"}, {include-group = "plot"}]
cosmo-gui            = [{include-group = "gui"}, {include-group = "mcap"}, {include-group = "plot"}]
trajectory-explorer  = [{include-group = "gui"}, {include-group = "mcap"}, {include-group = "ontology"}]

[project.scripts]
cosmo = "cosmo.cli.main:main"
cosmo-gui = "cosmo.cli.gui:main"
cosmo-convert = "cosmo.cli.convert:main"
cosmo-correct = "cosmo.cli.correct:main"
cosmo-calibrate = "cosmo.cli.calibrate:main"
trajectory-explorer = "cosmo.trajectory_explorer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmo"]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "F", "E", "W"]

ignore = [
  "E501",  # line too long
  "E701",  # multiple statements on one line (colon)
  "E702",  # multiple statements on one line (semicolon)
]

exclude = [
  "scripts/",
  "src/cosmo/gui_old.py",
  "src/cosmo/gui_old/",
]
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

# Register markers to avoid warnings and keep CI strict/clean

markers = [
  "smoke: fast CLI smoke tests (calibrate/convert/entrypoints) that can be filtered",
  "integration: end-to-end tests requiring optional deps (e.g. betterosi/MCAP) or heavier assets",
]

# Optional quality-of-life defaults:
# -ra: show extra test summary info for skipped/xfailed, etc.
# --strict-markers: fail if an unknown marker is used (prevents typos)
# -q can stay in CI; locally you might prefer less quiet output
addopts = "-ra --strict-markers"
